[package]
name = "connector_integration"
version = "0.1.0"
description = "connector integration"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain_types = { path = "../domain_types" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
interfaces = { path = "../interfaces" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }

# Third-party dependencies
serde = { workspace = true }
paste = "1.0"
error-stack = "0.4.0"