[package]
name = "domain_types"
version = "0.1.0"
description = "Domain Types"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
grpc = { path = "../grpc" }
# Third-party dependencies
serde = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.49"
error-stack = "0.4.0"
serde_json = "1.0.107"
http = "0.2.12"
bytes = "1.6.0"

