[package]
name = "external-services"
version = "0.1.0"
edition = "2021"

[dependencies]
interfaces = { path = "../interfaces" }
domain_types = { path = "../domain_types" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils", features = ["async_ext"] }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }
# Third-party dependencies
error-stack = "0.4.1"
serde = {version = "1.0.189" ,features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }