[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }

# Third-party dependencies
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
domain_types = { path = "../domain_types"}

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"